## Process this file with automake to produce Makefile.in

include ../../Common.am
AM_CPPFLAGS += # Something like $(CANTERA_CFLAGS) ???

##
## Miscellaneous programs and/or performance drivers
##

##
## Channel-based applications
##

##
## Tests for channel applications
##

# Required for AX_AM_MACROS
@INC_AMINCLUDE@
